# simple-payment-engine

./: .gitignore  Cargo.toml  README.md
data/inputs/: example_4_decimals.csv  test_all_transactions.csv
src/: account.rs  lib.rs  main.rs  transaction.rs  transaction_type.rs
