[package]
name = "simple-payment-engine"
version = "0.1.0"
edition = "2021"
authors = ["Justin Luoma <justin@justinluoma.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.1.6"}
serde = { version = "1.0.143", features = ["derive"]}
